fix: sumatoria y calculo de precio